--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "lucide-react": "^0.399.0",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "openai": "^4.52.2",
     "react": "^18",
     "react-dom": "^18",
