--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.1.7",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
