--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.4",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -31,12 +32,14 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "@types/dom-speech-recognition": "^0.0.4",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "browserify-fs": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-webpack": "^8.1.0",
     "embla-carousel-react": "^8.1.7",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
@@ -47,7 +50,10 @@
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "stream": "^0.0.3",
     "swiper": "^11.1.5",
     "tailwind-merge": "^2.4.0",
