--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.19.2",
     "formidable": "^3.5.1",
     "lucide-react": "^0.399.0",
+    "monaco-editor": "^0.50.0",
     "next": "^14.2.4",
     "openai": "^4.52.7",
     "react": "^18.3.1",
