--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.13.0",
     "@ffmpeg/ffmpeg": "^0.12.10",
     "@ffmpeg/util": "^0.12.1",
+    "@headlessui/react": "^2.1.2",
     "@heygen/streaming-avatar": "^1.0.11",
     "@hookform/resolvers": "^3.9.0",
     "@monaco-editor/react": "^4.6.0",
@@ -54,6 +55,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.27.1",
     "slick-carousel": "^1.8.1",
     "stream": "^0.0.3",
     "swiper": "^11.1.5",
