--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "monaco-editor": "^0.50.0",
     "next": "^14.2.4",
     "openai": "^4.52.7",
+    "posthog-js": "^1.151.2",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
