--- a/package.json
+++ b/package.json
@@ -44,15 +44,18 @@
     "embla-carousel-react": "^8.1.7",
     "express": "^4.19.2",
     "formidable": "^3.5.1",
+    "i18next": "^23.12.2",
     "lucide-react": "^0.399.0",
     "monaco-editor": "^0.50.0",
     "next": "^14.2.4",
+    "next-i18next": "^15.3.1",
     "openai": "^4.52.7",
     "posthog-js": "^1.151.2",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.52.1",
+    "react-i18next": "^15.0.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
