--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "monaco-editor": "^0.50.0",
     "next": "^14.2.4",
     "next-i18next": "^15.3.1",
+    "next-intl": "^3.17.2",
     "openai": "^4.52.7",
     "posthog-js": "^1.151.2",
     "react": "^18.3.1",
