--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^5.16.0",
     "@mui/material": "^5.16.4",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
